--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             
             <div class="col-lg-6">
-            <img class="title-image" src="/TinDog-Start-master/fruit web/image/fruit-2999796-removebg-preview.png" alt="iphone-mockup">
+            <img class="title-image" src="image/fruit-2999796-removebg-preview.png" alt="iphone-mockup">
             </div>
             <div class="explore">
                 <Button>Explore <i class="fa fa-arrow-right"></i></Button>
