--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <i class="fa fa-instagram"></i>
     <i class="fa fa-envelope"></i>
 
-    <p>© Copyright TinDog</p>
+    <p>© Copyright Yuvraj</p>
 
   </footer>
 
